# chinese-idiom-embedding

./: .gitignore  README.md  pyproject.toml
data/: idiom_subset.csv  idioms.csv  test_input.csv
output/: Conan-embedding-v1_top5_results.csv  gte-Qwen2-7B-instruct_top5_results.csv  gte-large-zh_top5_results.csv  puff-base-v1_top5_results.csv  tao-8k_top5_results.csv  xiaobu-embedding-v2_top5_results.csv
scripts/: build_vectors.py  get_similar_idioms.py  register_fonts.ipynb
src/chinese_idiom/: model.py  utils.py
tests/: test_conan.py  test_gte.py  test_gte_qwen.py  test_puff.py  test_tao.py  test_xiaobu.py
